stryker/force-app/main/default/objects/Enquiry__c/Enquiry__c.object-meta.xml
<CustomObject>
    <label>Enquiry</label>
    <nameField>
        <label>Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquirys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>