stryker/force-app/main/default/objects/Enquiry__c/fields/Employe__c.field-meta.xml
<CustomField>
    <fullName>Employe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employe</label>
    <referenceTo>Employe__c</referenceTo>
    <relationshipLabel>Enquirys</relationshipLabel>
    <relationshipName>Enquirys</relationshipName>
    <type>Lookup</type>
</CustomField>