stryker/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Number__c</fullName>
    <label>Enquiry Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>